New options on XML file + writing path for file is accepted, not only url
Signed-off-by: Yuya Tanaka <yuya.tanaka.i@gmail.com>